--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
 color:blueviolet;
-background:greenyellow;
+background:plum;
 }
 header{
 
-border: solid 2px wheat;
+border: solid 2px red;
 
 }
 
